# CRC1415-v1.4.3

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nomad.yaml
