[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0"

[project]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
name = "nomad-distribution"
description = "nomad distribution template"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-lab[infrastructure]==1.4.3.post1",
]

[project.urls]
repository = "https://github.com/bondoki/crc1415-v1.4.3"

[project.optional-dependencies]
# Add your plugins to the list below.
plugins = [
  "nomad-simulations==0.7.0",
  "nomad-simulation-apps==0.1.2",
  "nomad-schema-plugin-run==1.0.5",
  "nomad-schema-plugin-simulation-workflow==1.0.11",
  "nomad-normalizer-plugin-bandstructure==1.0.4",
  "nomad-normalizer-plugin-dos==1.0.7",
  "nomad-normalizer-plugin-soap==1.0.2",
  "nomad-normalizer-plugin-spectra==1.0.4",
  "nomad-normalizer-plugin-system==1.0.5",
  "nomad-normalizer-plugin-simulation-workflow==1.0.4",
  "nomad-parser-plugins-electronic @ git+https://github.com/nomad-coe/electronic-parsers.git@v1.0.16",
  "nomad-parser-plugins-atomistic==1.0.12",
  # "nomad-parser-plugins-workflow==1.1.12",
  "nomad-parser-plugins-workflow @ git+https://github.com/Bondoki/workflow-parsers@91a8ed025e2342577a1c82703b76141d5c0eb44b", #egg=improved-aflow-parser-with-vasp-workflow",
  "nomad-parser-plugins-database==1.1.3",
  "pynxtools==0.13.2",
  "pynxtools-apm==0.5.1",
  "pynxtools-ellips==0.1.2",
  "pynxtools-em==0.4.4",
  "pynxtools-igor==0.1.5",
  "pynxtools-mpes==0.2.7",
  "pynxtools-raman==0.1.2",
  "pynxtools-spm==0.2.4",
  "pynxtools-xps==0.6.2",
  "pynxtools-xrd==0.0.8",
  "nomad-north-apmtools==0.1.4",
  "nomad-north-fiji==0.1.4",
  "nomad-north-jupyter>=0.2.6",
  "nomad-north-nionswift==0.1.4",
  "nomad-north-pyiron @ git+https://github.com/FAIRmat-NFDI/nomad-north-pyiron.git@0b00b44b0ed0a927b5eca4eedd1a3571abdbf5ea",
  "nomad-north-vesta==0.1.5",
  "nomad-north-voila==0.1.14",
  "nomad-catalysis==1.0.5",
  "nomad-neb-workflows==1.0.2",
  "nomad-porous-materials @ git+https://github.com/FAIRmat-NFDI/nomad-porous-materials.git@522f4a3208077f534f1c5e886527ee2104283d0b",
  "nomad-aitoolkit @ git+https://github.com/FAIRmat-NFDI/nomad-aitoolkit.git@b203f8eb28dc4b6771a39d5c5b7ad3d9d8583ac8",
  "nomad-external-eln-integrations @ git+https://github.com/FAIRmat-NFDI/nomad-external-eln-integrations@982bbb3ed327d0256da59433e9bd66972cb8a86d",
  "pdf2doi @ git+https://github.com/sherjeelshabih/pdf2doi.git@fix-missing-config-in-wheel", # temporarily needed for solar cell database
  "perovskite-solar-cell-database[extraction]==1.2.13",
  "nomad-ml-workflows==0.0.6",
  #"crc1415plugin @ git+https://github.com/Bondoki/NOMADOasisPlugin.git@c46f98a6eb936dc3e650238ea9f571a7bc30a498",
  #"crc1415_about @ git+https://github.com/Bondoki/crc1415_about.git@d5aaa7a3db9ceb40626a8913f5fdb41ffacdb5ae"
  #"crc1415plugin @ git+https://github.com/Bondoki/NOMADOasisPlugin.git@main",
  #"crc1415_about @ git+https://github.com/Bondoki/crc1415_about.git@main",
  #"crc1415_examples @ git+https://github.com/Bondoki/crc1415_examples@main"
  "crc1415plugin @ git+https://github.com/CRC1415/NOMAD-CRC1415-Plugin", #.git@6024172d85f3ff788abe399170eef76508ad17ae",
  "crc1415_about @ git+https://github.com/CRC1415/crc1415_about", #@bb1e5a51a78604680803c9b8ddd21fbbe03ba7de",
  "crc1415_examples @ git+https://github.com/CRC1415/crc1415_examples", #@59facba1672e1a9bfad6415a22b99518620dee0d",
  "aifparser @ git+https://github.com/CRC1415/AdsorptionInformationFormat-ParserNOMAD", #c308d4a07ab4946fa99fa64c3bff46a912010a7e",
  "nomad-north-gwyddion @ git+https://github.com/CRC1415/nomad-north-gwyddion.git@5ef649a604f37957ab9ae7c7d20efc70ff95b26b",
  
]
jupyter = ["jupyter-events"]
gpu-action = []
cpu-action = []

dev = ["nomad-lab[infrastructure, dev]==1.4.3.post1"]

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
prerelease = "if-necessary-or-explicit"

[tool.setuptools.packages.find]
exclude = ["gui*", "docs*", "config*"]
